[package]
name = "smog-rs"
version = "0.1.0"
authors = ["Vladyslav Kondratenko <vladyslav.kondratenko.dev@gmail.com>"]
edition = "2024"
resolver = "3"
rust-version = "1.92.0"

[[bin]]
name = "smog-rs"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
# todo: JSON over MQTT/HTTP:
#  we have to wrap measurments in a JSON struct
#  and POST them to a REST endpoint or else.
serde = "1.0.228"
chrono = "0.4.42"
chrono-tz = "0.10.4"
log = "0.4.29"
anyhow = "1.0.100"
sgp40 = "1.0.0"
bme280-rs = "0.3.0"
embedded-hal-bus = "0.3.0"
esp-idf-svc = { version = "0.51.0" ,features = ["critical-section", "embassy-time-driver", "embassy-sync"]}
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-executor = { version = "0.9.1", features = ["executor-thread", "arch-std"] }

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc.) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33.1"
dotenvy = "0.15.7"
